remove surefire plugin java modules proeprties from pom.xml